# adaptive-curriculum-learning-for-domain-transfer-in-llm-evaluation

./: .gitignore  QUALITY_ASSESSMENT.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/: __init__.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/evaluation/: __init__.py  metrics.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/models/: __init__.py  components.py  model.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/training/: __init__.py  trainer.py
src/adaptive_curriculum_learning_for_domain_transfer_in_llm_evaluation/utils/: __init__.py  config.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
